# textutils-4

./: README.md  envirnoment-noarch.yml  environment-noarch.yml  environment.yml  environmentgit.yml  pyproject.toml
src/textutils/: core.py
tests/integration/: test_end_to_end.py
tests/unit/: test_core.py
